--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Oleksiy Nesterov, Webmotoric" />
     <meta name="copyright" content="Oleksiy Nesterov, Webmotoric" />
 
-    <meta name="viewport" content="width=900, user-scalable=no" />
+    <meta name="viewport" content="width=900" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- meta name="apple-itunes-app" content="app-id=XXXXXXXXX" / -->
