--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="blackopaque" />
     <!-- meta name="apple-itunes-app" content="app-id=XXXXXXXXX" / -->
     <meta name="format-detection" content="address=no" />
     <meta name="format-detection" content="telephone=no" />
